# vestige

./: .gitignore  METHODOLOGY.md  README.md  pyproject.toml
notebooks/: 00_db_extract.ipynb  01_population_vs_enrolments_statewise.ipynb  01_state_name_normalization.ipynb  02_activity_mix_analysis.ipynb  02_population_share_vs_enrolment_share.ipynb  03_aadhaar_coverage_percentage.ipynb  04_enrolment_activity_percentage_of_population.ipynb  04_remaining_population_not_enrolled.ipynb  05_top10_states_by_coverage.ipynb  06_bottom10_states_by_coverage.ipynb  07_cumulative_enrolments_over_time.ipynb  09_enrolments_per_10000_population.ipynb  10_enrolment_activity_by_literacy_statewise.ipynb  11_top10_literacy_vs_enrolment_activity.ipynb  12_bottom10_literacy_vs_enrolment_activity.ipynb  13_demographic_update_activity_by_literacy.ipynb  14_biometric_update_activity_by_literacy.ipynb  15_total_update_activity_by_literacy.ipynb  20_enrolments_per_centre_statewise.ipynb  21_updates_per_centre_statewise.ipynb  23_high_enrolment_low_centre_states.ipynb  24_high_update_low_centre_states.ipynb  25_enrolment_pressure_index.ipynb  26_update_pressure_index.ipynb  27_infrastructure_sufficiency_index.ipynb  28_top10_overloaded_states.ipynb  29_bottom10_centre_availability.ipynb  30_identity_churn_index.ipynb  31_composite_operational_stress.ipynb  32_enrolment_vs_update_burden.ipynb  33_high_churn_low_infrastructure.ipynb  34_top10_identity_churn.ipynb  35_low_infrastructure_high_churn.ipynb  36_top10_enrolments_per_capita.ipynb  37_bottom10_centres_per_capita.ipynb  (+58 more)
sql/: README.md  (+4 more)
(+10 files in other folders)
